static/css/pin.css
/*from http://cssdeck.com/labs/cj76ienz*/

body {
	background: url(http://subtlepatterns.com/patterns/scribble_light.png) ;
}

#content{

}

#tags{
    float: left;
    margin-left: 20px;
}

#wrapper {
	width: 90%;
	max-width: 1100px;
	min-width: 300px;
	margin: 50px auto;
}

.columns {
	-webkit-column-count: 3;
	-webkit-column-gap: 10px;
	-webkit-column-fill: auto;
	-moz-column-count: 3;
	-moz-column-gap: 10px;
	/*-moz-column-fill: auto;*/
	column-count: 3;
	column-gap: 10px;
	column-fill: auto;
}

.column{
    -webkit-column-count: 2;
	-webkit-column-gap: 10px;
	-webkit-column-fill: auto;
	-moz-column-count: 2;
	-moz-column-gap: 10px;
	/*-moz-column-fill: auto;*/
	column-count: 2;
	column-gap: 10px;
	column-fill: auto;
}

.pin {
    width: 100%;
    font-weight:bold ;
	display: inline-block;
	background: #FEFEFE;
	border: 2px solid #FAFAFA;
	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
	margin: 0 2px 10px;
	-webkit-column-break-inside: avoid;
	-moz-column-break-inside: avoid;
	column-break-inside: avoid;
	padding: 10px;
	padding-bottom: 5px;
	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
	opacity: 1;

	-webkit-transition: all .2s ease;
	-moz-transition: all .2s ease;
	-o-transition: all .2s ease;
	transition: all .2s ease;
}

.pin img {
	width: 100%;
	border-bottom: 1px solid #ccc;
	padding-bottom: 10px;
	margin-bottom: 5px;
}

.pin p {
	font: 12px/18px Arial, sans-serif;
	color: #333;
	margin: 0;
}

/*

@media (min-width: 320px) {
	#columns {
		-webkit-column-count: 1;
		-moz-column-count: 1;
		column-count: 1;
	}
}

@media (min-width: 768px) {
	#columns {
		-webkit-column-count: 3;
		-moz-column-count: 3;
		column-count: 3;
	}
}

@media (min-width: 960px) {
	#columns {
		-webkit-column-count: 4;
		-moz-column-count: 4;
		column-count: 4;
	}
}

@media (min-width: 1100px) {
	#columns {
		-webkit-column-count: 6;
		-moz-column-count: 6;
		column-count: 6;
	}
}

*/

#most_liked_pin{
    background: #b2dba1;
}

#least_liked_pin{
    background: #94Add0;
}

#most_recent_pin{
    background: rgba(221, 98, 210, 0.76);
}
/*
#columns:hover .pin:not(:hover) {
	opacity: 0.4;
}*/

